# manim-progress-bar

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
example/: progress_bar_example.py
manim_progress_bar/: __init__.py  progress_bar.py
